テストコード実装

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -10,4 +10,4 @@ ja:
         last_kanji: お名前（名）
         first_kana: お名前カナ（姓）
         last_kana: お名前カナ（名）
-        birthday: 誕生日
+        birthday: 生年月日
