--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -11,3 +11,13 @@ ja:
         first_kana: お名前カナ（姓）
         last_kana: お名前カナ（名）
         birthday: 生年月日
+      item:
+        name: 商品名
+        image: 出品画像
+        explain: 商品の説明
+        category_id: カテゴリー
+        status_id: 商品の状態
+        delivery_id: 配送料の負担
+        prefecture_id: 発送元の地域
+        schedule_id: 発送までの日数
+        price: 販売価格
