--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -24,6 +24,7 @@ ja:
   activemodel:
     attributes:
       order_address:
+        token: クレジットカード情報
         postal_code: 郵便番号
         prefecture_id: 都道府県
         city: 市区町村
