通報機能の実装

--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -21,6 +21,8 @@ ja:
         prefecture_id: 発送元の地域
         schedule_id: 発送までの日数
         price: 販売価格
+      report:
+        kind_id: 通報の種類
   activemodel:
     attributes:
       order_address:
